Closed
Bug 824723
Opened 13 years ago
Closed 13 years ago
Don't fire error events if the worker is shutting down
Categories
(Core :: DOM: Workers, defect)
Core
DOM: Workers
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: khuey, Assigned: khuey)
Details
Attachments
(1 file)
|
937 bytes,
patch
|
bent.mozilla
:
review+
|
Details | Diff | Splinter Review |
This makes ReportErrorRunnable match MessageEventRunnable and prevents an intermittent inner window correctness assertion.
Attachment #695770 -
Flags: review?(bent.mozilla)
Updated•13 years ago
|
Attachment #695770 -
Flags: review?(bent.mozilla) → review+
| Assignee | ||
Comment 1•13 years ago
|
||
Comment 2•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in
before you can comment on or make changes to this bug.
Description
•