Bug 824723: Don't fire error events if the worker is shutting down. r=bent